feat: add 2020_02_25 doc

--- a/_templates/course/new/markdown.ejs
+++ b/_templates/course/new/markdown.ejs
@@ -1,5 +1,9 @@
 ---
 to: courses/<%=name%>.md
 ---
+# Lundi 23 Mars - HTML / CSS 
 
-# Lundi 23 Mars - HTML / CSS ## Récapitulatif ## Documentation []()
+## Récapitulatif 
+
+## Documentation 
+- []()
